==> Warwolt/lora-rc-electrical-switch-poc/Src/spi.c <==
/*
********************************************************************************
* File Name          : SPI.c
* Description        : This file provides code for the configuration
*                      of the SPI instances.
********************************************************************************
*/

/* Includes ------------------------------------------------------------------*/
#include "spi.h"

SPI_HandleTypeDef hspi1;

/* SPI1 init function */
void spi_init(void)
{
	/* Enable GPIO peripheral clocks */
	__HAL_RCC_GPIOA_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();
	__HAL_RCC_GPIOC_CLK_ENABLE();
	__HAL_RCC_GPIOD_CLK_ENABLE();

	/* Configure the SPI1 peripheral */
	hspi1.Instance = SPI1;

	hspi1.Init.Mode              = SPI_MODE_MASTER;
	hspi1.Init.Direction         = SPI_DIRECTION_2LINES;
	hspi1.Init.DataSize          = SPI_DATASIZE_8BIT;
	hspi1.Init.CLKPolarity       = SPI_POLARITY_LOW;
	hspi1.Init.CLKPhase          = SPI_PHASE_1EDGE;
	hspi1.Init.NSS               = SPI_NSS_SOFT;
	hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_256; 
	hspi1.Init.FirstBit          = SPI_FIRSTBIT_MSB;
	hspi1.Init.TIMode            = SPI_TIMODE_DISABLE;
	hspi1.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE;
	hspi1.Init.CRCPolynomial     = 7;
	
	if (HAL_SPI_Init(&hspi1) != HAL_OK)
	{
		Error_Handler();
	}

	/* Configure the GPIO slave select pin */
	GPIO_InitTypeDef GPIO_InitStruct;

	GPIO_InitStruct.Pin   = RFM96_NSS_PIN;
	GPIO_InitStruct.Mode  = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull  = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(RFM96_NSS_PORT, &GPIO_InitStruct);

	/* Configure the GPIO RFM96 reset pin */
	GPIO_InitStruct.Pin   = RFM96_RESET_PIN;
	GPIO_InitStruct.Mode  = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull  = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(RFM96_RESET_PORT, &GPIO_InitStruct);

	/* Disable slave */
	rfm96_spi_disable();
}

/*
 * brief     : wrapper function for HAL library spi transmit function 
 * tx_data   : pointer to first byte in tx data buffer 
 * num_bytes : size of buffer in bytes  
 */
void spi_transmit(uint8_t* tx_data, size_t num_bytes)
{
	HAL_SPI_Transmit(&hspi1, tx_data, num_bytes, SPI_WAIT_TIME);
}

/*
 * brief     : wrapper function for HAL library spi transmit function 
 * tx_data   : pointer to first byte in tx data buffer 
 * rx_data   : pointer to first byte in rx data buffer 
 * num_bytes : size of buffers in bytes  
 */
void spi_transmit_receive(uint8_t* tx_data, uint8_t* rx_data, size_t num_bytes)
{
	HAL_SPI_TransmitReceive(&hspi1, tx_data, rx_data, num_bytes, SPI_WAIT_TIME);	
}

void HAL_SPI_MspInit(SPI_HandleTypeDef* spiHandle)
{
	GPIO_InitTypeDef GPIO_InitStruct;
	if(spiHandle->Instance==SPI1)
	{
	/* USER CODE BEGIN SPI1_MspInit 0 */

	/* USER CODE END SPI1_MspInit 0 */
		/* Peripheral clock enable */
		__HAL_RCC_SPI1_CLK_ENABLE();
	
		/**SPI1 GPIO Configuration    
		PA5     ------> SPI1_SCK
		PA11     ------> SPI1_MISO
		PA12     ------> SPI1_MOSI 
		*/
		GPIO_InitStruct.Pin = GPIO_PIN_5|GPIO_PIN_11|GPIO_PIN_12;
		GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
		GPIO_InitStruct.Pull = GPIO_NOPULL;
		GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
		GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
		HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

	/* USER CODE BEGIN SPI1_MspInit 1 */

	/* USER CODE END SPI1_MspInit 1 */
	}
}

void HAL_SPI_MspDeInit(SPI_HandleTypeDef* spiHandle)
{

	if(spiHandle->Instance==SPI1)
	{
	/* USER CODE BEGIN SPI1_MspDeInit 0 */

	/* USER CODE END SPI1_MspDeInit 0 */
		/* Peripheral clock disable */
		__HAL_RCC_SPI1_CLK_DISABLE();
	
		/**SPI1 GPIO Configuration    
		PA5     ------> SPI1_SCK
		PA11     ------> SPI1_MISO
		PA12     ------> SPI1_MOSI 
		*/
		HAL_GPIO_DeInit(GPIOA, GPIO_PIN_5|GPIO_PIN_11|GPIO_PIN_12);

	}
	/* USER CODE BEGIN SPI1_MspDeInit 1 */

	/* USER CODE END SPI1_MspDeInit 1 */
} 

/* USER CODE BEGIN 1 */

/* USER CODE END 1 */

/**
	* @}
	*/

/**
	* @}
	*/

/************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****/
